# fcc-edm

./: .gitignore  CMakeLists.txt  README.md  doc.twiki  edm.yaml  edm_1.1.yaml  edm_1.yaml  fccedmConfig.cmake.in  fccedmVersion.h  init.sh  init_linux.sh  init_macos.sh
.github/scripts/: compile_and_test.sh
.github/workflows/: test.yml
cmake/: Datamodel.cmake  FindROOT.cmake  fccedmCPack.cmake  fccedmConfig.cmake.in  fccedmCreateConfig.cmake  fccedmDoxygen.cmake
datamodel/: CMakeLists.txt
datamodel/datamodel/: BareCluster.h  BareHit.h  BareJet.h  BareParticle.h  CaloCluster.h  CaloClusterCollection.h  CaloClusterConst.h  CaloClusterData.h  CaloClusterHandle.h  CaloClusterObj.h  CaloHit.h  CaloHitAssociation.h  CaloHitAssociationCollection.h  CaloHitAssociationConst.h  CaloHitAssociationData.h  CaloHitAssociationHandle.h  CaloHitAssociationObj.h  CaloHitCollection.h  CaloHitConst.h  CaloHitData.h  CaloHitHandle.h  CaloHitMCParticleAssociation.h  CaloHitMCParticleAssociationCollection.h  CaloHitMCParticleAssociationConst.h  CaloHitMCParticleAssociationData.h  CaloHitMCParticleAssociationObj.h  CaloHitObj.h  EventInfo.h  EventInfoCollection.h  EventInfoConst.h  EventInfoData.h  EventInfoHandle.h  EventInfoObj.h  GenJet.h  GenJetCollection.h  GenJetConst.h  GenJetData.h  GenJetHandle.h  GenJetIntTagAssociation.h  GenJetIntTagAssociationCollection.h  (+219 more)
datamodel/src/: CaloCluster.cc  CaloClusterCollection.cc  CaloClusterConst.cc  CaloClusterHandle.cc  CaloClusterObj.cc  CaloHit.cc  CaloHitAssociation.cc  CaloHitAssociationCollection.cc  CaloHitAssociationConst.cc  CaloHitAssociationHandle.cc  CaloHitAssociationObj.cc  CaloHitCollection.cc  CaloHitConst.cc  CaloHitHandle.cc  CaloHitMCParticleAssociation.cc  CaloHitMCParticleAssociationCollection.cc  CaloHitMCParticleAssociationConst.cc  CaloHitMCParticleAssociationObj.cc  CaloHitObj.cc  EventInfo.cc  EventInfoCollection.cc  EventInfoConst.cc  EventInfoHandle.cc  EventInfoObj.cc  GenJet.cc  GenJetCollection.cc  GenJetConst.cc  GenJetHandle.cc  GenJetIntTagAssociation.cc  GenJetIntTagAssociationCollection.cc  GenJetIntTagAssociationConst.cc  GenJetIntTagAssociationObj.cc  GenJetObj.cc  GenJetParticleAssociation.cc  GenJetParticleAssociationCollection.cc  GenJetParticleAssociationConst.cc  GenJetParticleAssociationHandle.cc  GenJetParticleAssociationObj.cc  GenJetTagAssociation.cc  GenJetTagAssociationCollection.cc  (+169 more)
doc/: Doxyfile.in  design.md  how_to_modify.md  intro.md  usage.md
examples/: CMakeLists.txt  dataframe.cc  example_edm.yaml  graph.cc  read.cc  simpleread.cc  simplewrite.cc  write.cc
fcc-edm/fcc-edm.xcodeproj/: project.pbxproj
fcc-edm/fcc-edm.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
fcc-edm/fcc-edm.xcodeproj/project.xcworkspace/xcuserdata/cbernet.xcuserdatad/: UserInterfaceState.xcuserstate
fcc-edm/fcc-edm.xcodeproj/xcuserdata/cbernet.xcuserdatad/xcschemes/: fcc-edm.xcscheme  xcschememanagement.plist
tests/: CMakeLists.txt  graph_read_test.cc  graph_write_test.cc  test_EventStore.py
utilities/: CMakeLists.txt  DummyGenerator.cc  DummyGenerator.h  FCCLambdas.cc  FCCLambdas.h  FloatData.h  GraphBuilder.cc  GraphBuilder.h  JetUtils.cc  JetUtils.h  LinkDef.h  ParticleGraph.cc  ParticleGraph.h  ParticleUtils.cc  ParticleUtils.h  TagUtils.h  VectorUtils.cc
utilities/src/: DummyGenerator.cc  JetUtils.cc  ParticleUtils.cc  VectorUtils.cc
utilities/utilities/: JetUtils.h  VectorUtils.h
